--- a/src/components/post-github.astro
+++ b/src/components/post-github.astro
@@ -1,29 +1,28 @@
 ---
-import octokit from '@/libs/octokit';
-import { USERNAME } from 'astro:env/server';
-import { Book, GitFork, Star } from 'lucide-astro';
+import type { CollectionEntry } from 'astro:content';
+import Icon from './ui/icon.astro';
 import Text from './ui/text.astro';
 
-type Props = { repo: string };
+type Props = { repo: NonNullable<CollectionEntry<'posts'>['data']['repo']> };
 
-const repo = await octokit.repos.get({ owner: USERNAME, repo: Astro.props.repo }).then((res) => res.data);
+const { repo } = Astro.props;
 ---
 
 <a
-  href={repo.html_url}
+  href={repo.websiteUrl}
   target="_blank"
   rel="nofollow noopener noreferrer"
   aria-label={`Check out the github repo: ${repo.name}. ${repo.description}`}
   class="group flex flex-col gap-1 rounded border px-4 py-3 shadow focus-visible:outline-none focus-visible:ring-1"
 >
   <div class="flex items-center gap-2 group-hover:text-brand motion-safe:transition-colors">
-    <Book class="size-3.5 shrink-0 text-2" aria-hidden />
+    <Icon name="book" class="size-3.5 text-2" />
     <Text class="text-sm">{repo.name}</Text>
   </div>
   <Text as="p" class="text-2 text-xs">{repo.description}</Text>
   <div class="mt-1.5 flex items-center gap-4 text-2 text-xs">
     <div class="mr-1 flex items-center gap-1"><div class="size-4 rounded-full border bg-3"></div>{repo.language}</div>
-    <div class="flex items-center gap-1"><Star class="size-4" aria-hidden />{repo.stargazers_count}</div>
-    <div class="flex items-center gap-1"><GitFork class="size-4" aria-hidden />{repo.forks_count}</div>
+    <div class="flex items-center gap-1"><Icon name="star" />{repo.stargazers}</div>
+    <div class="flex items-center gap-1"><Icon name="git-fork" />{repo.forks}</div>
   </div>
 </a>
