--- a/src/components/ui/note.astro
+++ b/src/components/ui/note.astro
@@ -12,8 +12,11 @@ const { class: className, ...props } = Astro.props;
 <aside
   {...props}
   aria-labelledby={id}
-  class={twMerge('flex items-start gap-2 rounded border border-l-8 bg-2 px-4 py-3 text-xs', className)}
+  class={twMerge(
+    'bg-surface-2 border-border flex items-start gap-2 rounded border border-l-8 px-4 py-3 text-xs',
+    className,
+  )}
 >
-  <p {id} aria-label="Note" aria-hidden><Icon name="info" class="translate-y-1 text-2" /></p>
+  <p {id} aria-label="Note" aria-hidden><Icon name="info" class="text-foreground-2 translate-y-1" /></p>
   <section><slot /></section>
 </aside>
