--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,6 +7,6 @@ import Layout from '@/layouts/layout.astro';
 
 <Layout class="text-center">
   <Text as="h1" class="text-9xl">404</Text>
-  <Text as="h2" class="text-2">Page Not Found</Text>
+  <Text as="h2" class="text-foreground-2">Page Not Found</Text>
   <Link href="/" class="mt-6 gap-3"><Icon name="arrow-left" />Go Back home </Link>
 </Layout>
