--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,8 +22,8 @@ const posts = (await getCollection('posts'))
   <section class="flex items-center justify-between gap-24">
     <div>
       <Text as="h1" class="leading-none">CHRISTIAN PENROD</Text>
-      <Text as="h2" class="text-2">Front-End Web Developer</Text>
-      <Text as="p" class="mb-10 mt-4 text-2">
+      <Text as="h2" class="text-foreground-2">Front-End Web Developer</Text>
+      <Text as="p" class="text-foreground-2 mt-4 mb-10">
         Working on the web since 2018. I enjoy developing efficient web experiences through code and design. I'm equally
         driven to sharing knowledge with others.
       </Text>
@@ -45,17 +45,19 @@ const posts = (await getCollection('posts'))
         <Separator class="mt-2" aria-hidden />
       </DataList.Root>
     </div>
-    <div class="hidden size-[320px] shrink-0 overflow-hidden rounded border-2 opacity-80 shadow lg:block">
+    <div
+      class="border-border hidden size-[320px] shrink-0 overflow-hidden rounded border-2 opacity-80 shadow-sm lg:block"
+    >
       <Image src={Me} alt="Me" class="brightness-150 grayscale dark:brightness-100" />
     </div>
   </section>
   <section class="flex flex-col gap-6">
-    <Text as="h3" class="text-2">PROJECTS</Text>
+    <Text as="h3" class="text-foreground-2">PROJECTS</Text>
     <!-- prettier-ignore -->
     <ul class="grid lg:grid-cols-2 gap-x-10 gap-y-6">{projects.map((project) => <li><ProjectCard {project} /></li>)}</ul>
   </section>
   <section class="flex flex-col gap-6">
-    <Text as="h3" class="text-2">RECENT POSTS</Text>
+    <Text as="h3" class="text-foreground-2">RECENT POSTS</Text>
     <!-- prettier-ignore -->
     <ul class="gap-10 grid lg:grid-cols-3">{posts.map((post) => <li><PostCard {post} /></li>)}</ul>
     <Link href="/blog" class="self-end">View all posts <Icon name="arrow-right" class="size-3" /></Link>
