--- a/src/components/project-card.astro
+++ b/src/components/project-card.astro
@@ -10,12 +10,12 @@ type Props = { project: CollectionEntry<'projects'> };
 const { project } = Astro.props;
 ---
 
-<div class="h-full rounded border shadow">
-  <div class="flex items-center gap-2 rounded-t border-b bg-2 px-2 py-1">
-    <Icon name="book" class="size-3 text-2" />
+<div class="border-border h-full rounded border shadow-sm">
+  <div class="bg-surface-2 border-border flex items-center gap-2 rounded-t border-b px-2 py-1">
+    <Icon name="book" class="text-foreground-2 size-3" />
     <Text class="text-sm">{project.data.name}</Text>
   </div>
-  <div class="flex flex-col gap-3 p-3 text-2">
+  <div class="text-foreground-2 flex flex-col gap-3 p-3">
     <Text as="p" class="text-xs">{project.data.description}</Text>
     <Separator />
     <div class="flex items-center justify-between gap-2 text-xs">
