--- a/src/components/ui/code/components/header.astro
+++ b/src/components/ui/code/components/header.astro
@@ -9,7 +9,10 @@ const { class: className, ...props } = Astro.props;
 
 <figcaption
   {...props}
-  class={twMerge('flex h-8 items-center rounded-t border-b bg-2 px-4 py-0.5 text-2 text-xs', className)}
+  class={twMerge(
+    'bg-surface-2 text-foreground-2 border-border flex h-8 items-center rounded-t border-b px-4 py-0.5 text-xs',
+    className,
+  )}
 >
   <slot />
 </figcaption>
