--- a/src/components/ui/datalist/components/key.astro
+++ b/src/components/ui/datalist/components/key.astro
@@ -7,4 +7,4 @@ type Props = HTMLAttributes<'dt'>;
 const { class: className, ...props } = Astro.props;
 ---
 
-<dt {...props} class={twMerge('font-medium text-2', className)}><slot />:</dt>
+<dt {...props} class={twMerge('text-foreground-2 font-medium', className)}><slot />:</dt>
