--- a/src/components/ui/skeleton.astro
+++ b/src/components/ui/skeleton.astro
@@ -7,4 +7,4 @@ type Props = HTMLAttributes<'div'>;
 const { class: className, ...props } = Astro.props;
 ---
 
-<div {...props} role="presentation" class={twMerge('bg-2 motion-safe:animate-pulse', className)}></div>
+<div {...props} role="presentation" class={twMerge('bg-surface-2 motion-safe:animate-pulse', className)}></div>
