--- a/src/components/ui/tabs/components/tab.astro
+++ b/src/components/ui/tabs/components/tab.astro
@@ -18,19 +18,14 @@ const { class: className, for: htmlFor, ...props } = Astro.props;
   @click={`active = "${htmlFor}"`}
   @focus={`active = "${htmlFor}"`}
   class={twMerge(
-    'relative flex flex-1 items-center justify-center whitespace-nowrap',
-    'rounded px-3 py-0.5 text-xs aria-selected:text-brand',
-    'hover:text-brand motion-safe:transition-colors',
-    'focus-visible:outline-none focus-visible:ring-1',
+    'aria-selected:text-brand relative isolate rounded text-xs',
+    'm-1 flex-1 border-none px-3 py-0.5 motion-safe:transition-colors',
+    'focus-visible:ring-ring focus-visible:ring-1 focus-visible:outline-none',
+    'before:bg-surface-1 before:absolute before:inset-0 before:-z-10',
+    'before:rounded before:content-[""] motion-safe:before:transition-all',
+    'before:scale-90 before:opacity-0 aria-selected:before:scale-100 aria-selected:before:opacity-100',
     className,
   )}
 >
-  <div
-    role="presentation"
-    x-show={`active === "${htmlFor}"`}
-    x-transition:enter="animate-in fade-in-0 zoom-in-90"
-    class="absolute inset-0 z-0 rounded bg-1 content-[''] motion-safe:transition-colors"
-  >
-  </div>
-  <div class="z-10"><slot /></div>
+  <slot />
 </button>
