--- a/src/components/ui/textfield.astro
+++ b/src/components/ui/textfield.astro
@@ -7,8 +7,8 @@ type Props = HTMLAttributes<'input'>;
 const { class: className, type, spellcheck, autocomplete, ...props } = Astro.props;
 ---
 
-<div class={twMerge('relative flex items-center justify-between rounded border bg-1', className)}>
-  <div class="absolute left-2 top-1/2 z-10 shrink-0 -translate-y-1/2 text-2/50"><slot name="prefix" /></div>
+<div class={twMerge('bg-surface-1 border-border relative flex items-center justify-between rounded border', className)}>
+  <div class="text-foreground-2/50 absolute top-1/2 left-2 z-10 shrink-0 -translate-y-1/2"><slot name="prefix" /></div>
   <input
     {...props}
     type={type ?? 'text'}
@@ -16,11 +16,11 @@ const { class: className, type, spellcheck, autocomplete, ...props } = Astro.pro
     autocomplete={autocomplete ?? 'off'}
     class={twJoin(
       'relative z-20 w-full flex-1 shrink-0 rounded bg-transparent px-3 py-1',
-      'placeholder:text-2/50 focus-visible:outline-none focus-visible:ring-1',
+      'placeholder:text-foreground-2/50 focus-visible:ring-ring focus-visible:ring-1 focus-visible:outline-none',
       'disabled:pointer-events-none disabled:opacity-50',
       Astro.slots.has('prefix') && 'pl-7',
       Astro.slots.has('suffix') && 'pr-10',
     )}
   />
-  <div class="absolute right-2 top-1/2 z-10 shrink-0 -translate-y-1/2 text-2/50"><slot name="suffix" /></div>
+  <div class="text-foreground-2/50 absolute top-1/2 right-2 z-10 shrink-0 -translate-y-1/2"><slot name="suffix" /></div>
 </div>
