--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -22,15 +22,15 @@ const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
 <Layout title="Blog | Christian Penrod" class="mx-auto lg:max-w-screen-xl lg:px-20">
   <section>
     <Text as="h1">BLOG POSTS</Text>
-    <Text as="h2" class="text-2 text-sm">Explore various sofware-related posts.</Text>
+    <Text as="h2" class="text-foreground-2 text-sm">Explore various sofware-related posts.</Text>
   </section>
-  <Separator class="mb-8 mt-4 lg:mb-12" />
+  <Separator class="mt-4 mb-8 lg:mb-12" />
   <div class="grid gap-10 lg:grid-cols-[1fr_30%] xl:gap-20">
     <section class="flex flex-col gap-6">
       <div class="flex items-center gap-4">
-        <Text as="h3" class="text-2">ALL POSTS</Text>
+        <Text as="h3" class="text-foreground-2">ALL POSTS</Text>
         <Separator class="flex-1" />
-        <div class="flex items-center text-2 text-xs">
+        <div class="text-foreground-2 flex items-center text-xs">
           <Text>{views} Views</Text>
           <Icon name="dot" />
           <Text>{posts.length} Posts</Text>
@@ -39,7 +39,7 @@ const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
       <div x-data="partial('/blog/results')" class="flex flex-col gap-6">
         <form
           method="post"
-          class="flex flex-col gap-4 rounded border p-4 shadow text-xs"
+          class="border-border flex flex-col gap-4 rounded border p-4 text-xs shadow-sm"
           @submit.prevent="!loading && (submission.get('query')?.trim() ?? '') !== $el.query.value?.trim() && submit()"
         >
           <div class="flex gap-2">
@@ -57,7 +57,7 @@ const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
       </div>
     </section>
     <section class="hidden flex-col gap-6 lg:flex">
-      <Text as="h3" class="text-2">RECENT POSTS</Text>
+      <Text as="h3" class="text-foreground-2">RECENT POSTS</Text>
       <!-- prettier-ignore -->
       <ul class="flex flex-col gap-6">{posts.slice(0, 3).map((post) => <li><PostCard {post} /></li>)}</ul>
     </section>
