--- a/src/pages/blog/results.astro
+++ b/src/pages/blog/results.astro
@@ -46,12 +46,12 @@ if (Astro.request.method === 'POST') {
             class={twJoin([
               'group flex flex-col rounded py-2 text-xs',
               'sm:flex-row sm:items-center sm:justify-between sm:gap-2',
-              'focus-visible:outline-none focus-visible:ring-1',
+              'focus-visible:ring-ring focus-visible:ring-1 focus-visible:outline-none',
             ])}
           >
             <Text class="group-hover:text-brand motion-safe:transition-colors">{post.data.title}</Text>
             <Separator class="flex-1" />
-            <div class="flex items-center text-2">
+            <div class="text-foreground-2 flex items-center">
               <Date value={post.data.published} />
               <Icon name="dot" />
               <Text>{post.remarkPluginFrontmatter.readingTime}</Text>
