--- a/src/components/ui/theme.astro
+++ b/src/components/ui/theme.astro
@@ -4,28 +4,18 @@ import Icon from './icon.astro';
 ---
 
 <Button
-  x-data="{ theme: localStorage.theme }"
+  x-data
   color="ghost"
   size="icon"
   aria-label="Toggle theme"
   @click={`
     document.documentElement.classList.toggle('dark');
-    localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light';
-    theme = localStorage.theme;
+    localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light';  
+    $el.firstElementChild.classList.add('starting:scale-0');
 `}
 >
-  <Icon
-    x-show="theme === 'dark'"
-    x-transition:enter="animate-in duration-300 motion-safe:fade-in-0 motion-safe:zoom-in-0"
-    name="sun"
-    class="hidden dark:block"
-  />
-  <Icon
-    x-show="theme === 'light'"
-    x-transition:enter="animate-in duration-300 motion-safe:fade-in-0 motion-safe:zoom-in-0"
-    name="moon-star"
-    class="dark:hidden"
-  />
+  <Icon name="sun" class="hidden scale-100 duration-300 motion-safe:transition-all dark:block" />
+  <Icon name="moon-star" class="scale-100 duration-300 motion-safe:transition-all dark:hidden starting:scale-0" />
 </Button>
 
 <script is:inline>
@@ -33,7 +23,6 @@ import Icon from './icon.astro';
     if ('theme' in localStorage) root.classList.toggle('dark', localStorage.theme === 'dark');
     else if (window.matchMedia('(prefers-color-scheme: dark)').matches) root.classList.add('dark');
     else root.classList.remove('dark');
-
     localStorage.theme = root.classList.contains('dark') ? 'dark' : 'light';
   }
 
