--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
 
+@variant dark (&:where(.dark, .dark *));
+
 @theme {
   --font-sans: 'Inter', 'sans-serif';
 
@@ -30,30 +32,85 @@
   --text-8xl--line-height: 1;
   --text-9xl--line-height: 1;
 
-  --color-surface-1: hsl(0 0% 3%);
-  --color-surface-2: hsl(0 0% 10%);
-  --color-surface-3: hsl(0 0% 20%);
-  --color-foreground-1: hsl(0 0% 90%);
-  --color-foreground-2: hsl(0 0% 66%);
-  --color-brand: hsl(0 0% 100%);
-  --color-border: hsl(0 0% 24%);
-  --color-ring: hsl(0 0% 50%);
+  --color-surface-1: var(--_color-surface-1);
+  --color-surface-2: var(--_color-surface-2);
+  --color-surface-3: var(--_color-surface-3);
+  --color-foreground-1: var(--_color-foreground-1);
+  --color-foreground-2: var(--_color-foreground-2);
+  --color-brand: var(--_color-brand);
+  --color-border: var(--_color-border);
+  --color-ring: var(--_color-ring);
 
-  --color-code-text: hsl(0 0% 91%);
-  --color-code-background: hsl(0 0% 2%);
-  --color-code-token-constant: hsl(0 0% 59%);
-  --color-code-token-string: hsl(0 0% 70%);
-  --color-code-token-comment: hsl(0 0% 43%);
-  --color-code-token-keyword: hsl(0 0% 59%);
-  --color-code-token-parameter: hsl(0 0% 100%);
-  --color-code-token-function: hsl(0 0% 100%);
-  --color-code-token-string-expression: hsl(0, 0%, 70%);
-  --color-code-token-punctuation: hsl(0 0% 100%);
+  --color-code-text: var(--_color-code-text);
+  --color-code-background: var(--_color-code-background);
+  --color-code-token-constant: var(--_color-code-token-constant);
+  --color-code-token-string: var(--_color-code-token-string);
+  --color-code-token-comment: var(--_color-code-token-comment);
+  --color-code-token-keyword: var(--_color-code-token-keyword);
+  --color-code-token-parameter: var(--_color-code-token-parameter);
+  --color-code-token-function: var(--_color-code-token-function);
+  --color-code-token-string-expression: var(--_color-code-token-string-expression);
+  --color-code-token-punctuation: var(--_color-code-token-punctuation);
 
-  --shadow-sm: 0.3px 0.5px 0.7px hsl(0 0% 0%/ 0.45), 0.9px 1.8px 2.3px -0.8px hsl(0 0% 0%/ 0.45),
-    2.3px 4.6px 5.8px -1.7px hsl(0 0% 0%/ 0.45), 5.6px 11.3px 14.2px -2.5px hsl(0 0% 0%/ 0.45);
+  --shadow-sm: var(--_shadow-sm);
 
   --default-transition-duration: 200ms;
+}
+
+@layer base {
+  html:not(.dark) {
+    @apply scheme-only-light;
+
+    --_color-surface-1: hsl(0 0% 95%);
+    --_color-surface-2: hsl(0 0% 90%);
+    --_color-surface-3: hsl(0 0% 82%);
+    --_color-foreground-1: hsl(0 0% 12%);
+    --_color-foreground-2: hsl(0 0% 34%);
+    --_color-brand: hsl(0 0% 0%);
+    --_color-border: hsl(0 0% 64%);
+    --_color-ring: hsl(0 0% 10%);
+
+    --_color-code-text: hsl(0 0% 9%);
+    --_color-code-background: hsl(0 0% 100%);
+    --_color-code-token-constant: hsl(0 0% 41%);
+    --_color-code-token-string: hsl(0 0% 30%);
+    --_color-code-token-comment: hsl(0 0% 69%);
+    --_color-code-token-keyword: hsl(0 0% 41%);
+    --_color-code-token-parameter: hsl(0 0% 0%);
+    --_color-code-token-function: hsl(0 0% 0%);
+    --_color-code-token-string-expression: hsl(0, 0%, 30%);
+    --_color-code-token-punctuation: hsl(0 0% 0%);
+
+    --_shadow-sm: 0.3px 0.5px 0.7px hsl(0 0% 70%/0.45), 0.9px 1.8px 2.3px -0.8px hsl(0 0% 70%/0.45),
+      2.3px 4.6px 5.8px -1.7px hsl(0 0% 70%/0.45), 5.6px 11.3px 14.2px -2.5px hsl(0 0% 70%/0.45);
+  }
+
+  html.dark {
+    @apply scheme-only-dark;
+
+    --_color-surface-1: hsl(0 0% 3%);
+    --_color-surface-2: hsl(0 0% 10%);
+    --_color-surface-3: hsl(0 0% 20%);
+    --_color-foreground-1: hsl(0 0% 90%);
+    --_color-foreground-2: hsl(0 0% 66%);
+    --_color-brand: hsl(0 0% 100%);
+    --_color-border: hsl(0 0% 24%);
+    --_color-ring: hsl(0 0% 50%);
+
+    --_color-code-text: hsl(0 0% 91%);
+    --_color-code-background: hsl(0 0% 2%);
+    --_color-code-token-constant: hsl(0 0% 59%);
+    --_color-code-token-string: hsl(0 0% 70%);
+    --_color-code-token-comment: hsl(0 0% 43%);
+    --_color-code-token-keyword: hsl(0 0% 59%);
+    --_color-code-token-parameter: hsl(0 0% 100%);
+    --_color-code-token-function: hsl(0 0% 100%);
+    --_color-code-token-string-expression: hsl(0, 0%, 70%);
+    --_color-code-token-punctuation: hsl(0 0% 100%);
+
+    --_shadow-sm: 0.3px 0.5px 0.7px hsl(0 0% 0%/ 0.45), 0.9px 1.8px 2.3px -0.8px hsl(0 0% 0%/ 0.45),
+      2.3px 4.6px 5.8px -1.7px hsl(0 0% 0%/ 0.45), 5.6px 11.3px 14.2px -2.5px hsl(0 0% 0%/ 0.45);
+  }
 }
 
 @utility scrollbar {
