💄 Switch to Geist sans and use proper fallbacks

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -10,9 +10,7 @@ import Separator from '@/components/ui/separator.astro';
 import Text from '@/components/ui/text.astro';
 import Theme from '@/components/ui/theme.astro';
 import '@/tailwind.css';
-import '@fontsource/inter/400.css';
-import '@fontsource/inter/500.css';
-import '@fontsource/inter/700.css';
+import '@fontsource/geist-sans';
 import type { HTMLAttributes } from 'astro/types';
 import * as env from 'astro:env/server';
 import { ViewTransitions } from 'astro:transitions';
