--- a/src/components/ui/code/components/content.astro
+++ b/src/components/ui/code/components/content.astro
@@ -6,4 +6,4 @@ type Props = HTMLAttributes<'pre'>;
 const { class: className, tabindex, ...props } = Astro.props;
 ---
 
-<pre {...props} class="overflow-auto p-4 leading-6 scrollbar-thin"><slot /></pre>
+<pre {...props} class="scrollbar overflow-auto rounded p-4 leading-6"><slot /></pre>
